--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,15 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,500" rel="stylesheet">
 </head>
 <body>
-  <!--<header>
-    <img style="float:left" src="./assets/Images/Vchaticon.jpg" height="100" width="100">
-  <iframe src="http://free.timeanddate.com/clock/i5vr6n1j/n75/szw110/szh110/hoc09f/hbw0/hfc09f/cf100/hnce1ead6/fas30/fdi66/mqc000/mql15/mqw4/mqd98/mhc000/mhl15/mhw4/mhd98/mmc000/mml10/mmw1/mmd98/hhs2/hms2/hsv0" frameborder="0" width="110" height="110"></iframe>
-  <br>
-  <iframe src="http://free.timeanddate.com/clock/i5vr6n1j/n75/fcfff/tc444/pct/bo2/pd2/tt0/tw0/tm1/ts1/tb4" frameborder="0" width="89" height="36" allowTransparency="true"></iframe>
-  </header>-->
+  <header>
+  <img style="float:left" src="./assets/Images/Vchaticon.jpg" height="100" width="100">
+ 
+  <iframe style="float:right" src="http://free.timeanddate.com/clock/i5vr6n1j/n75/fcfff/tc444/pct/bo2/pd2/tt0/tw0/tm1/ts1/tb4" frameborder="0" width="89" height="36" allowTransparency="true"></iframe>
+  </header>
     
   <app-root></app-root>
-
- 
-
-</body>
+  <footer>&copy; Copyright 2017 | sampath Reddy| All Rights Reserved</footer>
+  </body>
   
 
 </html>
