--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   </header>
     
   <app-root></app-root>
-  <footer>&copy; Copyright 2017 | sampath Reddy| All Rights Reserved</footer>
+  <footer style="float:right">&copy; Copyright 2017 | sampath Reddy| All Rights Reserved</footer>
   </body>
   
 
